fix invisible menu modal; fix broken modal portal when dialog not supported

--- a/src/menu/style.less
+++ b/src/menu/style.less
@@ -16,6 +16,8 @@
         background: @menu-background;
         border-radius: 4px;
         transform-origin: 0 0;
+        min-width: 8px;
+        min-height: 8px;
         max-height: 100vh;
         overflow-y: auto;
         .elevation(8);
